--- a/Reportabug/Reportabug/Base.lproj/Main_iPhone.storyboard
+++ b/Reportabug/Reportabug/Base.lproj/Main_iPhone.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Home-->
+        <!--Home View Controller - Home-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="HomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -44,10 +44,10 @@
             </objects>
             <point key="canvasLocation" x="50" y="41"/>
         </scene>
-        <!--Detail View Controller - Bug Details-->
+        <!--Bug Description View Controller - Bug Details-->
         <scene sceneID="fss-Jq-z9e">
             <objects>
-                <viewController id="EK9-ZJ-9hm" customClass="detailViewController" sceneMemberID="viewController">
+                <viewController id="EK9-ZJ-9hm" customClass="BugDescriptionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tw3-Mf-ynp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask"/>
